Schedule: Fix overflow

--- a/src/modules/schedule/schedule/schedule.component.scss
+++ b/src/modules/schedule/schedule/schedule.component.scss
@@ -1,5 +1,15 @@
-.mdi {
-  padding-right: 13px;
-  color: rgba(0, 0, 0, 0.54);
-  font-size: 18px;
+:host {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+
+  ejs-schedule {
+    flex: 1 1 auto;
+
+    .mdi {
+      padding-right: 13px;
+      color: rgba(0, 0, 0, 0.54);
+      font-size: 18px;
+    }
+  }
 }
